@@ -1,9 +1,31 @@
 plugins {
     id("dororong.rodi.android.library.compose")
+    alias(libs.plugins.roborazzi)
+}
+
+roborazzi {
+    outputDir.set(file("src/test/snapshots"))
 }
 
 android {
     namespace = "com.dororong.rodi.core.ui"
+    testOptions {
+        unitTests.isIncludeAndroidResources = true
+        unitTests.all {
+            it.systemProperties["robolectric.pixelCopyRenderMode"] = "hardware"
+            it.jvmArgs(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/java.security=ALL-UNNAMED",
+                "--add-opens=java.base/java.text=ALL-UNNAMED",
+                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            )
+        }
+    }
 }
 
 dependencies {
@@ -18,5 +40,10 @@ dependencies {
     implementation(libs.timber)
     debugImplementation(libs.androidx.compose.ui.tooling)
     testImplementation(libs.bundles.unit.test)
+    testImplementation(libs.bundles.roborazzi.test)
+    testRuntimeOnly(libs.junit.vintage.engine)
     testRuntimeOnly(libs.junit.platform.launcher)
+    androidTestImplementation(platform(libs.androidx.compose.bom))
+    androidTestImplementation(libs.bundles.android.test)
+    debugImplementation(libs.androidx.compose.ui.test.manifest)
 }
