@@ -1,10 +1,32 @@
 plugins {
     id("dororong.rodi.android.library.compose")
     id("dororong.rodi.android.hilt")
+    alias(libs.plugins.roborazzi)
+}
+
+roborazzi {
+    outputDir.set(file("src/test/snapshots"))
 }
 
 android {
     namespace = "com.dororong.rodi.feature.home"
+    testOptions {
+        unitTests.isIncludeAndroidResources = true
+        unitTests.all {
+            it.systemProperties["robolectric.pixelCopyRenderMode"] = "hardware"
+            it.jvmArgs(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/java.security=ALL-UNNAMED",
+                "--add-opens=java.base/java.text=ALL-UNNAMED",
+                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            )
+        }
+    }
 }
 
 dependencies {
@@ -24,6 +46,8 @@ dependencies {
     testImplementation(libs.bundles.unit.test)
     testRuntimeOnly(libs.junit.platform.launcher)
     testImplementation(libs.bundles.flow.test)
+    testImplementation(libs.bundles.roborazzi.test)
+    testRuntimeOnly(libs.junit.vintage.engine)
     androidTestImplementation(platform(libs.androidx.compose.bom))
     androidTestImplementation(libs.bundles.android.test)
     debugImplementation(libs.androidx.compose.ui.test.manifest)
